# scimesh

./: README.md  pyproject.toml  pytest.ini
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
agents/: condense.md  contribution-extractor.md  critical-reader.md  exploration-condenser.md  fact-checker.md  methodology-extractor.md  paper-appraiser.md  paper-briefer.md  paper-condenser.md  paper-tagger.md  reproducibility-extractor.md  results-extractor.md  scientific-writer.md  scope-extractor.md  search.md
plugins/scimesh/.claude-plugin/: plugin.json
scimesh/: __init__.py  cli.py  fulltext.py  models.py  search.py
scimesh/download/: __init__.py  base.py  fallback.py  host_concurrency.py  openaccess.py  playwright.py  scihub.py
scimesh/export/: __init__.py  bibtex.py  json.py  ris.py  vault.py
scimesh/providers/: __init__.py  _fulltext_fallback.py  arxiv.py  base.py  crossref.py  openalex.py  scopus.py  semantic_scholar.py
scimesh/query/: combinators.py  parser.py
scimesh/vault/: cli.py
scimesh/workspace/: __init__.py  cli.py  models.py  repository.py
skills/appraising/: SKILL.md
skills/exploring/: SKILL.md
skills/extracting/: SKILL.md
skills/protocoling/: SKILL.md
skills/screening/: SKILL.md
skills/searching/: SKILL.md
skills/snowballing/: SKILL.md
skills/synthesizing/: SKILL.md
tests/: test_cache.py  test_cli.py  test_cli_download.py  test_combinators.py  test_crossref.py  test_download_base.py  test_download_init.py  test_export.py  test_fulltext.py  test_fulltext_fallback.py  test_host_concurrency.py  test_integration.py  test_merge.py  test_models.py  test_openaccess.py  test_openalex.py  test_paper_exporter.py  test_parser.py  test_provider_base.py  test_scihub.py  test_search.py  test_semantic_scholar.py  test_workspace_cli.py  test_workspace_models.py  test_workspace_repository.py
tests/integration/: conftest.py  test_citations.py  test_cli.py  test_download.py  test_export.py  test_fulltext.py  test_multiprovider.py
(+5 files in other folders)
